style tag in tags widget to something better than bullet points

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6075,6 +6075,18 @@ body.no-sidebar .sidebar {
   transition: 0.2s ease;
 }
 
+.tag-list-link {
+  padding: .4em .5em;
+  margin: 2px 2px 2px 0;
+  color: hsl(205deg 47% 42%);
+  background-color: hsl(205deg 46% 92%);
+  font-size: 12px;
+  line-height: 1;
+  border-width: 1px;
+  border-radius: 3px;
+  display: inline-block;
+}
+
 .category-list-child {
   padding-left: 15px;
 }
