--- a/layouts/partials/_widgets/category.html
+++ b/layouts/partials/_widgets/category.html
@@ -1,10 +1,10 @@
 <div class="widget">
     <h3 class="widget-title"> {{ T "widget_categories" }}</h3>
     <div class="widget-body">
-        <ul class="category-list">
+        <div class="category-list">
             {{- range $name, $taxonomy := $.Site.Taxonomies.categories }}
             {{- with $.Site.GetPage (printf "/categories/%s" $name) }}
-            <li class="category-list-item"><a href="{{ .Permalink }}" class="category-list-link">{{ $name }}</a><span class="category-list-count">{{ $taxonomy.Count}}</span></li>
+            <a href="{{ .Permalink }}" class="category-list-link category-list-item">{{ $name }}</a>
             {{- end }}
             {{- end }}
         </ul>
