--- a/layouts/partials/script.html
+++ b/layouts/partials/script.html
@@ -37,6 +37,8 @@
 </script>
 {{- $insight := resources.Get "js/insight.js" | resources.Minify | resources.Fingerprint "sha512" }}
 <script type="text/javascript" src="{{- $insight.Permalink }}" defer></script>
+{{- $codecopy := resources.Get "js/code-copy.js" | resources.Minify | resources.Fingerprint "sha512" }}
+<script type="text/javascript" src="{{- $codecopy.Permalink }}" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tocbot/4.4.2/tocbot.min.js"></script>
 <script>
     tocbot.init({
