--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2131,7 +2131,7 @@ tbody.collapse.in {
 
 .navbar:before,
 .navbar:after {
-  content: " ";
+  content: none;
   display: table;
 }
 
@@ -2141,7 +2141,7 @@ tbody.collapse.in {
 
 .navbar-header:before,
 .navbar-header:after {
-  content: " ";
+  content: none;
   display: table;
 }
 
@@ -2161,7 +2161,7 @@ tbody.collapse.in {
 
 .navbar-collapse:before,
 .navbar-collapse:after {
-  content: " ";
+  content: none;
   display: table;
 }
 
@@ -5786,7 +5786,6 @@ body.no-sidebar .sidebar {
 
 .main-nav > li {
   display: block;
-  width: 100%;
   position: relative;
 }
 
@@ -5795,7 +5794,7 @@ body.no-sidebar .sidebar {
 }
 
 .main-nav > li .menu-title {
-  margin-left: 15px;
+  margin-left: 5px;
 }
 
 .main-nav > .active a,
@@ -5814,8 +5813,8 @@ body.no-sidebar .sidebar {
 }
 
 #avatar {
-  width: 64px;
-  height: 64px;
+  width: 32px;
+  height: 32px;
   display: inline-block;
 }
 
@@ -5844,7 +5843,6 @@ body.no-sidebar .sidebar {
 .sidebar-form {
   border-radius: 3px;
   border: 1px solid #eee;
-  margin: 0 15px 15px 15px;
 }
 
 .sidebar-form input[type="text"],
@@ -5900,6 +5898,19 @@ body.no-sidebar .sidebar {
 
 .header .navbar-toggle .icon-bar {
   background-color: #2196f3;
+}
+
+.search-form-submit {
+  padding: 0;
+}
+
+.search-form-input {
+  padding: 0;
+  margin-left: 5px;
+}
+
+.input-group {
+  padding: 0px 20px;
 }
 
 /*
@@ -7769,7 +7780,6 @@ body.okayNav-loaded {
   }
 
   .navbar-collapse.collapse {
-    display: block !important;
     height: auto !important;
     padding-bottom: 0;
     overflow: visible !important;
@@ -7930,6 +7940,7 @@ body.okayNav-loaded {
   }
 
   .header {
+    padding: 0 !important; /* i very much dislike !important, but i can't figure out where to change */
     position: fixed;
     top: 0;
     bottom: 0;
@@ -7942,7 +7953,7 @@ body.okayNav-loaded {
     border-right: 1px solid #f6f6f6;
     /* width: 4.16667%; */
     width: 100%;
-    height: 70px;
+    height: 56px;
   }
 
   .sidebar {
@@ -7957,13 +7968,38 @@ body.okayNav-loaded {
     /* Scrollable contents if viewport is shorter than content. */
     border-right: 1px solid #f6f6f6;
     width: 33.33333%;
-    margin-top: 80px;
+    margin-top: 56px;
   }
 
   .main {
     width: 66.66667%;
     padding-right: 20px;
     padding-left: 20px;
+  }
+
+  #main-navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+  }
+
+  ul.navbar-nav.nav.main-nav {
+    display: flex;
+  }
+
+  .header .main-nav > li > a {
+    text-align: center;
+    padding: 10px 5px;
+  }
+
+  .sidebar-form {
+    border: 0;
+  }
+
+  input.search-form-input {
+    width: 50px !important;
+    cursor: pointer;
   }
 
   .footer {
@@ -7976,7 +8012,7 @@ body.okayNav-loaded {
   }
 
   body.main-center .main {
-    margin-top: 80px;
+    margin-top: 56px;
   }
 
   body.main-left .sidebar {
@@ -8004,10 +8040,13 @@ body.okayNav-loaded {
 
   .header .navbar-header {
     float: none;
+    display: flex;
+    align-items: center;
   }
 
-  #avatar img {
-    padding: 5px;
+  .header .profile-block {
+    padding: 0;
+    margin: 12px 12px;
   }
 
   .bar.bar-footer:before {
@@ -8890,7 +8929,6 @@ body.okayNav-loaded {
 
   .sidebar-form {
     border: 0;
-    margin: 9px 45px 9px 0;
   }
 
   .sidebar-form .input-group-btn .btn {
@@ -8918,20 +8956,13 @@ body.okayNav-loaded {
   }
 
   .header .search {
-    width: 90%;
     float: right;
   }
 
   .header .profile-block {
     padding: 0;
-    margin: 10px 0;
-    width: 8.33333%;
+    margin: 12px 12px;
     float: left;
-  }
-
-  .header #avatar {
-    width: 32px;
-    height: 32px;
   }
 
   .header #name,
@@ -8942,6 +8973,7 @@ body.okayNav-loaded {
 
   #main-navbar {
     position: absolute;
+    top: 56px;
     width: 100%;
     background-color: #fbfbfb;
     border-bottom: 1px solid #f6f6f6;
@@ -9088,6 +9120,10 @@ body.okayNav-loaded {
       #555299 100%
     );
   }
+
+  #main-navbar {
+    padding-bottom: 10px;
+  }
 }
 
 @media screen and (max-width: 559px), screen and (max-height: 479px) {
@@ -9107,6 +9143,10 @@ body.okayNav-loaded {
     height: 24px;
     margin-top: 3px;
     margin-left: 15px;
+  }
+
+  #main-navbar {
+    top: 47px;
   }
 }
 
@@ -9142,31 +9182,6 @@ body.okayNav-loaded {
 
   .hidden-sm {
     display: none !important;
-  }
-
-  .sidebar-form {
-    display: none;
-  }
-
-  .header .main-nav > li > a {
-    text-align: center;
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  .header .main-nav > li > a span {
-    display: none;
-  }
-
-  .header .profile-block {
-    padding-top: 10px;
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  .header #avatar {
-    width: 32px;
-    height: 32px;
   }
 
   .footer {
